# ig-notion-sync

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml
.claude/commands/: tag-pillars.md
src/: config.py  instagram.py  main.py  models.py  notion.py
tests/: test_upsert_logic.py
